Initial shot at matching

--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
 	<meta charset="utf-8">
 	<title>DrawMatch</title>
 	<script src="Point.js"></script>
+	<script src="Glyph.js"></script>
+	<script src="patterns.js"></script>
 	<script src="js.js"></script>
 </head>
 <body>
-	<canvas id="canvas" width="812" height="379"></canvas>
+	<canvas id="canvas" width="812" height="379" style="float:left"></canvas>
+	<div id="log" style="float:left"></div>
 </body>
 </html>
